unpackaged/main/default/objects/OrderApi__Business_Group__c/OrderApi__Business_Group__c.object-meta.xml
<CustomObject>
    <description>Separate groups or business entities to facilitate clear reporting on business lines and/or entities.</description>
    <label>Business Group</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>