unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/DDApi__Direct_Debit_API_Service_Connection__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Direct_Debit_API_Service_Connection__c</fullName>
    <description>** Direct Debit ** API Service Connection Name for the GoCardless Connection for making future callouts to this Business Group</description>
    <inlineHelpText>** Direct Debit ** API Service Connection Name for the GoCardless Connection for making future callouts to this Business Group</inlineHelpText>
    <label>Direct Debit API Service Connection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>