unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/DDApi__Direct_Debit_Connection__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Direct_Debit_Connection__c</fullName>
    <description>DEPRECATED</description>
    <inlineHelpText>DEPRECATED</inlineHelpText>
    <label>DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>