unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__AR_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__AR_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** Business groups require a relationship to a default A/R account.</description>
    <inlineHelpText>**Required** Business groups require a relationship to a default A/R account.</inlineHelpText>
    <label>A/R Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Business Groups</relationshipLabel>
    <relationshipName>Business_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>