unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Business_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Entity_Type__c</fullName>
    <description>**Optional/When Applicable** Specify the Legal Entity Type for the Business Group.</description>
    <inlineHelpText>**Optional/When Applicable** Specify the Legal Entity Type for the Business Group.</inlineHelpText>
    <label>Business Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Doing Business As (DBA)</fullName>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Non-Profit 501(c)(3)</fullName>
            </value>
            <value>
                <fullName>Non-Profit 501(c)(4)</fullName>
            </value>
            <value>
                <fullName>Non-Profit 501(c)(5)</fullName>
            </value>
            <value>
                <fullName>Non-Profit 501(c)(6)</fullName>
            </value>
            <value>
                <fullName>Professional Corporation</fullName>
            </value>
            <value>
                <fullName>S-Corporation</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>