unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Calculate_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Calculate_Sales_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, enables the tax related validations and calculations.</description>
    <inlineHelpText>When checked, enables the tax related validations and calculations.</inlineHelpText>
    <label>Calculate Sales Tax</label>
    <type>Checkbox</type>
</CustomField>