unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Credit_Memo_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Credit_Memo_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the GL Account used to create new credit memo receipts linked to this business group.</description>
    <inlineHelpText>Link to the GL Account used to create new credit memo receipts linked to this business group.</inlineHelpText>
    <label>Credit Memo Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Business Groups (Invoice Credit Memo Account)</relationshipLabel>
    <relationshipName>Credit_Memo_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>