unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Customer_Support_URL__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Customer_Support_URL__c</fullName>
    <description>Fully qualified URL is required. A fully qualified URL contains the http:// (or https://www). If the URL is just your domain, the trailing / should also be provided.</description>
    <inlineHelpText>Fully qualified URL is required. A fully qualified URL contains the http:// (or https://www). If the URL is just your domain, the trailing / should also be provided.</inlineHelpText>
    <label>Customer Support URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>