unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Default_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Default_Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Default Payment Gateway to the related Business Group.</description>
    <inlineHelpText>Defines the Default Payment Gateway to the related Business Group.</inlineHelpText>
    <label>Default Payment Gateway</label>
    <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Business Groups</relationshipLabel>
    <relationshipName>Business_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>