unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Deposit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** The default deposit account to use for posting cash entry transactions.</description>
    <inlineHelpText>**System Calculated/Override** The default deposit account to use for posting cash entry transactions.</inlineHelpText>
    <label>Deposit Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Business Groups (Deposit Account)</relationshipLabel>
    <relationshipName>Business_Groups2</relationshipName>
    <type>Lookup</type>
</CustomField>