unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>Briefly describe the ledger as you would like to see it on a report. (72 Chars. or less)</description>
    <inlineHelpText>Briefly describe the ledger as you would like to see it on a report. (72 Chars. or less)</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>