unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Name__c</fullName>
    <description>** System Calculated Override ** The name that should be displayed when the Business Group is referenced on Invoices and other external pages and documents. Defaults to the &quot;Name&quot; defined for the Business Group.</description>
    <inlineHelpText>** System Calculated Override ** The name that should be displayed when the Business Group is referenced on Invoices and other external pages and documents. Defaults to the &quot;Name&quot; defined for the Business Group.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>