unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Email__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Email__c</fullName>
    <description>** System Calculated ** The email address to display to customers on Invoices and related documents.</description>
    <inlineHelpText>** System Calculated ** The email address to display to customers on Invoices and related documents.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>