unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Enable_Shipping_By_Order_Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Shipping_By_Order_Total__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When selected, customers will see a single shipping rate for the entire order. Otherwise, customers will see shipping rates for each unique item in their order. In either case, shipping is calculated only for items that have &quot;Require Shipping&quot; enabled.</description>
    <inlineHelpText>When selected, customers will see a single shipping rate for the entire order. Otherwise, customers will see shipping rates for each unique item in their order. In either case, shipping is calculated only for items that have &quot;Require Shipping&quot; enabled.</inlineHelpText>
    <label>DEPRECATED</label>
    <type>Checkbox</type>
</CustomField>