unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Fonteva_Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Fonteva_Default_Currency__c</fullName>
    <description>The Fonteva default currency for the business group.</description>
    <inlineHelpText>The Fonteva default currency for the business group.</inlineHelpText>
    <label>Fonteva Default Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>