unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Invoice_Footer_HTML__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Footer_HTML__c</fullName>
    <description>Custom message that displays at the bottom of all invoices.</description>
    <inlineHelpText>Custom message that displays at the bottom of all receipts.</inlineHelpText>
    <label>Invoice Footer HTML</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>