unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Invoice_Header__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Header__c</fullName>
    <description>Custom message that displays at the top of all invoices and receipts.</description>
    <inlineHelpText>Custom message that displays at the top of all invoices and receipts.</inlineHelpText>
    <label>Invoice/Receipt Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>