unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Invoice_Header_Fieldset_CSV__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Header_Fieldset_CSV__c</fullName>
    <description>Stores the custom fieldsets of an invoice header as a CSV.</description>
    <inlineHelpText>Stores the custom fieldsets of an invoice header as a CSV.</inlineHelpText>
    <label>Invoice Header Fieldset CSV</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>