unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Invoice_Header_HTML__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Header_HTML__c</fullName>
    <description>Custom message that displays at the top of all invoices.</description>
    <inlineHelpText>Custom message that displays at the top of all invoices.</inlineHelpText>
    <label>Invoice Header HTML</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>