unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Invoice_OverPayment_Credit_Memo_Limit__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_OverPayment_Credit_Memo_Limit__c</fullName>
    <description>When an invoice is overpaid by an amount less than or equal to the value of this field, a new credit memo will be created and applied against the customer&#39;s account automatically.</description>
    <inlineHelpText>When an invoice is overpaid by an amount less than or equal to the value of this field, a new credit memo will be created and applied against the customer&#39;s account automatically.</inlineHelpText>
    <label>Invoice Overpayment Credit Memo Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>