unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Invoice_Page_Override__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Page_Override__c</fullName>
    <description>Defines the custom page that will be shown when clicking on a invoice link</description>
    <inlineHelpText>Defines the custom page that will be shown when clicking on a invoice link</inlineHelpText>
    <label>Invoice Page Override</label>
    <type>Url</type>
</CustomField>