unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Invoice_Write_off_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Write_off_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the GL Account used to write-off remaining balances for Invoices linked to this Business Group.</description>
    <inlineHelpText>Link to the GL Account used to write-off remaining balances for Invoices linked to this Business Group.</inlineHelpText>
    <label>Invoice Write-off Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Business Groups (Invoice Write-off Account)</relationshipLabel>
    <relationshipName>Invoice_Write_off_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>