unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Invoice_Write_off_Limit__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Write_off_Limit__c</fullName>
    <description>When an Invoice is underpaid by an amount lesser or equal to the value of this field, the Invoice will automatically adjust itself and write off the remaining balance due.</description>
    <inlineHelpText>When an Invoice is underpaid by an amount lesser or equal to the value of this field the Invoice will automatically adjust itself and write-off the remaining balance due.</inlineHelpText>
    <label>Invoice Write-off Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>