unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Is_Master__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Master__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the Business Group is enabled for e-invoicing and can connect to a Payment Gateway for e-payment processing. When unchecked, a Parent Business Group must be designated. Defaults checked.</description>
    <inlineHelpText>When checked, the Business Group is enabled for e-invoicing and can connect to a Payment Gateway for e-payment processing. When unchecked, a Parent Business Group must be designated. Defaults checked.</inlineHelpText>
    <label>Is Master</label>
    <type>Checkbox</type>
</CustomField>