unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Mailing_Address__c</fullName>
    <defaultValue>$Organization.Street &amp;
            BR() &amp;
            $Organization.City &amp;
            IF( ISBLANK($Organization.City) , &quot;&quot;, &quot;, &quot;) &amp;
            $Organization.State &amp;
            &quot; &quot; &amp;
            $Organization.PostalCode &amp;
            BR() &amp;
            $Organization.Country</defaultValue>
    <description>** System Calculated Required Override ** The address to display on Invoices and related documents that reference the Business Group. Defaults from the Organization settings.</description>
    <inlineHelpText>** System Calculated Required Override ** The address to display on Invoices and related documents that reference the Business Group. Defaults from the Organization settings &quot;Address&quot; fields.</inlineHelpText>
    <label>Mailing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>