unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Merchant_Location__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Merchant_Location__c</fullName>
    <description>Some gateways allow you to customize the location of the merchant that appears on customer&#39;s credit card statements. (Optional) provide a merchant location descriptor.</description>
    <inlineHelpText>Some gateways allow you to customize the location of the merchant that appears on customer&#39;s credit card statements. (Optional) provide a merchant location descriptor.</inlineHelpText>
    <label>Merchant Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>