unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Merchant_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Merchant_Name__c</fullName>
    <defaultValue>$Organization.Name</defaultValue>
    <description>Some gateways allow you to customize the name that appears on customer&#39;s credit card statements. (Optional) provide a custom merchant name descriptor.</description>
    <inlineHelpText>Some gateways allow you to customize the name that appears on customer&#39;s credit card statements. (Optional) provide a custom merchant name descriptor.</inlineHelpText>
    <label>Merchant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>