unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Parent_Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Parent_Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Relationship to Business Group. Create a hierarchy of Business Groups by department, legal entity, etc. to improve Financial Reporting.</description>
    <inlineHelpText>Lookup Relationship to Business Group. Create a hierarchy of Business Groups by department, legal entity, etc. to improve Financial Reporting.</inlineHelpText>
    <label>Parent Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Affiliates &amp; Groups</relationshipLabel>
    <relationshipName>Business_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>