unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Phone__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Phone__c</fullName>
    <defaultValue>$Organization.Phone</defaultValue>
    <description>** System Calculated Override ** The phone number to display to customers on Invoices and related documents. Defaults to the Organization&#39;s phone number.</description>
    <inlineHelpText>** System Calculated Override ** The phone number to display to customers on Invoices and related documents. Defaults to the Organization&#39;s phone number.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>