unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Proforma_Invoice_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Proforma_Invoice_Email_Body__c</fullName>
    <description>The default message used as part of the &quot;Send Proforma Email&quot; Workflow</description>
    <inlineHelpText>The default message used as part of the &quot;Send Proforma Email&quot; Workflow</inlineHelpText>
    <label>Proforma Invoice Email Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>