unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Proforma_Invoice_Email_From_Address__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Proforma_Invoice_Email_From_Address__c</fullName>
    <description>The value in this field will auto-populate the sender&#39;s email address for proforma emails manually sent to your customers. User&#39;s email is used if left blank. This field is not available for automated emails (i.e. auto renewal emails).</description>
    <inlineHelpText>The email address of the sender of the proforma invoice email sent to your customers. Your user&#39;s email will be used if this field is left blank.</inlineHelpText>
    <label>Proforma Invoice Email From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>