unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Proforma_Invoice_Footer__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Proforma_Invoice_Footer__c</fullName>
    <description>The contents of this field will display inside the Footer of all proforma invoice documents generated from Sales Orders linked to this Business Group.</description>
    <inlineHelpText>The contents of this field will display inside the Footer of all proforma invoice documents generated from Sales Orders linked to this Business Group.</inlineHelpText>
    <label>Proforma Invoice Email Footer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>