unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Receipt_Header_Fieldset_CSV__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt_Header_Fieldset_CSV__c</fullName>
    <description>Stores the custom fieldsets of a receipt header as a CSV.</description>
    <inlineHelpText>Stores the custom fieldsets of a receipt header as a CSV.</inlineHelpText>
    <label>Receipt Header Fieldset CSV</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>