unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Receipt_Lines_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt_Lines_Fieldset__c</fullName>
    <description>Stores the custom fieldsets of a receipt line as a CSV.</description>
    <inlineHelpText>Stores the custom fieldsets of a receipt line as a CSV.</inlineHelpText>
    <label>Receipt Lines Fieldset</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>