unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Receipt_Page_Override__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt_Page_Override__c</fullName>
    <description>Defines the custom page that will be shown when clicking on a receipt link</description>
    <inlineHelpText>Defines the custom page that will be shown when clicking on a receipt link</inlineHelpText>
    <label>Receipt Page Override</label>
    <type>Url</type>
</CustomField>