unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Required_Tax_Fields_CSV__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Required_Tax_Fields_CSV__c</fullName>
    <description>Enter the API name of the Sales Order Billing address field the system will require on checkout. (Ex. Billing_State__c)</description>
    <inlineHelpText>Enter the API name of the Sales Order Billing address field the system will require on checkout. (Ex. Billing_State__c)</inlineHelpText>
    <label>Required Tax Fields (CSV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>