unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Shipping_Rate_Basis__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_Rate_Basis__c</fullName>
    <description>Select whether you want shipping to be calculated based on item weight or item value (price).</description>
    <inlineHelpText>Select whether you want shipping to be calculated based on item weight or item value (price).</inlineHelpText>
    <label>Shipping Rate Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Item Weight</fullName>
                <default>true</default>
                <label>Item Weight</label>
            </value>
            <value>
                <fullName>Item Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>