unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Theme__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Theme to use for the Business Group&#39;s eInvoicing portal.</description>
    <inlineHelpText>Link to the Theme to use for the Business Group&#39;s eInvoicing portal.</inlineHelpText>
    <label>Theme</label>
    <referenceTo>PagesApi__Theme__c</referenceTo>
    <relationshipLabel>Business Groups</relationshipLabel>
    <relationshipName>Business_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>