unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Transfers_Payable_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Transfers_Payable_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The GL Account to use for intracompany transfer payable transactions.</description>
    <inlineHelpText>The GL Account to use for intracompany transfer payable transactions.</inlineHelpText>
    <label>Transfers Payable Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Business Groups (Transfers Payable Account)</relationshipLabel>
    <relationshipName>Transfers_Payable_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>