unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Transfers_Receivable_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Transfers_Receivable_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The GL Account to use for intracompany transfer receivable transactions.</description>
    <inlineHelpText>The GL Account to use for intracompany transfer receivable transactions.</inlineHelpText>
    <label>Transfers Receivable Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Business Groups (Transfers Receivable Account)</relationshipLabel>
    <relationshipName>Transfers_Receivable_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>