unpackaged/main/default/objects/OrderApi__Business_Group__c/fields/OrderApi__Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Type__c</fullName>
    <description>List of Business Group Types (Department, Affiliate, Partner, Etc.). Select the most appropriate type from the list.</description>
    <inlineHelpText>List of Business Group Types (Department, Affiliate, Partner, Etc.). Select the most appropriate type from the list.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Business Entity</fullName>
            </value>
            <value>
                <fullName>Business Line</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Department Team</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>