unpackaged/main/default/objects/OrderApi__Business_Group__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Type__c</columns>
    <columns>OrderApi__Business_Entity_Type__c</columns>
    <columns>OrderApi__AR_Account__c</columns>
    <columns>OrderApi__Deposit_Account__c</columns>
    <columns>OrderApi__Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OrderApi__Theme__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>